// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly 1`] = `
<div>
  <div
    class="mfe-layout"
  >
    <div
      id="top"
    >
      Top
    </div>
    <div
      class="mfe-layout__container"
    >
      <div
        class="mfe-layout__aside"
      >
        <div
          id="side"
        >
          Side Bar
        </div>
      </div>
      <div
        class="mfe-layout__main"
      >
        <div
          id="main"
        >
          Main
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders correctly without a side 1`] = `
<div>
  <div
    class="mfe-layout mfe-layout--narrow"
  >
    <div
      class="mfe-layout__container"
    >
      <div
        class="mfe-layout__main"
      >
        <div
          id="main"
        >
          Main
        </div>
      </div>
    </div>
  </div>
</div>
`;
